<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id"> YOUR_APPLICATION_ID </string>
    <string name="parse_client_key"> YOUR_CLIENT_KEY </string>

    <string name="app_name"> Handouts </string>

    <string name="hello_world"> Hello World! </string>

    <string name="loginAs"> Login As: </string>
    <string name="faculty"> Faculty </string>
    <string name="student"> Student </string>

    <string name="action_settings"> Settings </string>
    <string name="title_activity_rider"> Map </string>
    <string name="title_activity_driver_location"> Map </string>

    <string name="forgotpasswordText"> Forgot Password? </string>
    <string name="memberLogin"> Member Login? </string>

    <string name="rollNumber"> Roll Number</string>
    <string name="dept_id"> Department Id </string>
    <string name="passwordHint"> Password </string>
    <string name="validationCodeButton"> Send Code </string>

    <string name="login"> LOGIN </string>
    <string name="dept"> Department </string>
    <string name="confirmPasswordHint"> Confirm Password </string>
    <string name="register"> REGISTER </string>
    <string name="name"> Name </string>
    <string name="emailId">Email Id</string>
    <string name="user"> User </string>
    <string name="codeGenerated"> Code </string>

    <string name="assignment"> Assignment</string>
    <string name="ebook"> E-Book </string>
    <string name="notes"> Notes </string>
    <string name="notice"> Notices </string>
    <string name="syllabus"> Syllabus </string>

    <string name="sem1"> Semester 1 </string>
    <string name="sem2"> Semester 2 </string>
    <string name="sem3"> Semester 3 </string>
    <string name="sem4"> Semester 4 </string>
    <string name="sem5"> Semester 5 </string>
    <string name="sem6"> Semester 6 </string>
    <string name="sem7"> Semester 7 </string>
    <string name="sem8"> Semester 8 </string>

    <string name="subjectIT"> Information Technology </string>
    <string name="subjectCSE"> Computer Science and Engineering </string>
    <string name="subjectEE"> Electrical Engineering </string>
    <string name="subjectECE"> Electronics and Communication Engineering </string>
    <string name="subjectCivil"> Civil Engineering </string>

    <string name="content_desc"> ImageView to show images on the activity </string>
    <string name="sub"> Choose the subject you want to explore! </string>
    <string name="test"> Hello </string>


    <string name="validationCodeButtonTextChanged"> VERIFY CODE </string>
    <string name="sendCodeButtonTextChanged"> SEND CODE </string>

    <string name="upload"> Upload File </string>
    <string name="choose"> Choose File </string>

    <string name="category"> Category </string>
    <string name="subject"> Subject </string>
    <string name="semester"> Semester </string>

    <string name="select_dept">Select Department</string>

    <string name="sem_choose">Choose Semester:</string>
    <string name="sub_choose">Choose Subject:</string>
    <string name="category_choose">Choose Category:</string>
    <string name="department_choose"> Choose Department </string>

    <string name="about_clg">ABOUT COLLEGE</string>
    <string name="address">Siliguri Institute of Technology\nS.I.T Campus, Salbari,\nPO. Sukna, Dist. Darjeeling,\nWest Bengal, PIN-734009.</string>
    <string name="phone">0353&#8211;2778002 / 2778004\n0353&#8211;2778003(Fax)</string>
    <string name="mail">registrar@sittechno.org\nadmission@sittechno.org</string>

    <string name="about_us">DEVELOPERS</string>
    <string name="richa">Richa Agarwal\nragarwal317@gmail.com\nDesignation-Database Developer</string>
    <string name="angshu">Angshuman Halder\nangshuman.halder243@gmail.com\nDesignation-Developer</string>
    <string name="ankita">Ankita Gupta\nankitagupta9505@gmail.com\nDesignation-UI/UX Designer</string>
    <string name="binita">Binita Agarwal\nagarwalbinita1395@gmail.com\nDesignation-UI/UX Developer</string>

    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="resetpass">Reset Password</string>

    <string name="menu_title_about_us"> About Us </string>
    <string name="menu_title_about_college"> About college </string>
    <string name="menu_title_logout"> Logout </string>
</resources>
