<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoblur"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_clg"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="#111111"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/place"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/place"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#111111"
            android:text="@string/address"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/mail"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/phone"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#111111"
            android:text="@string/phone"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/phone"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/mail"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#111111"
            android:text="@string/mail"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
