<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoblur"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="#111111"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/angshu_image"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/angshu"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angshu"
            android:textColor="#111111"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/angshu_image" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/ankita"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ankita_image"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/ankita_image"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/anki"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_desc"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/binita_image"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/bini"
            android:contentDescription="@string/content_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#111111"
            android:text="@string/binita"
            android:layout_toEndOf="@+id/binita_image"
            android:layout_centerVertical="true"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/richa"
            android:layout_toStartOf="@+id/richa_image"
            android:layout_centerVertical="true"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/richa_image"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:src="@drawable/richac"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_desc"/>


    </RelativeLayout>

</LinearLayout>
