<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="@drawable/logoblur"
    tools:context=".SemesterActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mainLayout">

        <Button
            android:text="@string/sem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:tag="1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#111111"
            android:background="@drawable/back_trans"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:tag="2"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/back_trans"
            android:textStyle="bold"
            android:textColor="#111111"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:tag="3"
            android:layout_column="0"
            android:textStyle="bold"
            android:layout_row="1"
            android:textColor="#111111"
            android:background="@drawable/back_trans"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:tag="4"
            android:background="@drawable/back_trans"
            android:layout_column="1"
            android:layout_row="1"
            android:textStyle="bold"
            android:textColor="#111111"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:tag="5"
            android:layout_column="0"
            android:layout_row="2"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/back_trans"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_trans"
            android:id="@+id/button6"
            android:tag="6"
            android:layout_column="1"
            android:textStyle="bold"
            android:layout_row="2"
            android:textColor="#ffffff"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:tag="7"
            android:layout_column="0"
            android:layout_row="3"
            android:textStyle="bold"
            android:background="@drawable/back_trans"
            android:layout_rowWeight="1"
            android:textColor="#ffffff"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>

        <Button
            android:text="@string/sem8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:tag="8"
            android:layout_column="1"
            android:layout_row="3"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/back_trans"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="fetchSemesterNumber"/>
    </GridLayout>
</RelativeLayout>
