<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/logoblur">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/register_cnfpassword"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="number"
        android:textColorHint="#111111"
        android:paddingEnd="4dp"
        android:paddingLeft="4dp"
        android:paddingStart="4dp" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:ems="10"
        android:background="@drawable/register_cnfpassword"
        android:inputType="text"
        android:layout_below="@+id/name"
        android:layout_marginTop="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/emailId"
        android:textColorHint="#111111"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

    <EditText
        android:id="@+id/dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:inputType="number"
        android:layout_below="@+id/roll_number"
        android:layout_marginTop="20sp"
        android:background="@drawable/register_cnfpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/dept"
        android:textColorHint="#111111"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

    <EditText
        android:id="@+id/roll_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:inputType="number"
        android:layout_below="@+id/emailId"
        android:layout_marginTop="20sp"
        android:background="@drawable/register_cnfpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/rollNumber"
        android:textColorHint="#111111"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:ems="10"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:inputType="textPassword"
        android:background="@drawable/register_cnfpassword"
        android:hint="@string/passwordHint"
        android:layout_below="@+id/dept"
        android:layout_marginTop="20sp"
        android:textColorHint="#111111"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:ems="10"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:inputType="textPassword"
        android:background="@drawable/register_cnfpassword"
        android:hint="@string/confirmPasswordHint"
        android:layout_below="@+id/password"
        android:textColorHint="#111111"
        android:layout_marginTop="20sp"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUp"
            android:onClick="signUp"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:textColor="#ffffff"
            android:layout_below="@+id/confirmPassword"
            android:background="#0D47A1"
            android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/memberLogin"
        android:textSize="20sp"
        android:layout_below="@+id/signUp"
        android:layout_marginTop="15sp"
        android:id="@+id/forgotPassword"
        android:onClick="loginActivity"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
