<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MemberLoginActivity"
    android:background="@drawable/logoblur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/loginAs"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:layout_margin="5dp">


            <TextView
                android:id="@+id/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/student"
                android:textColor="#111111"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#111111"
                android:text="@string/faculty"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
        android:id="@+id/loginUserId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/faculty"
        android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_cnfpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/rollNumber"
        android:textColorHint="#111111"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

     <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/loginPassword"
        android:ems="10"
         android:drawableLeft="@drawable/pass"
         android:backgroundTint="@color/cast_expanded_controller_seek_bar_progress_background_tint_color"
        android:background="@drawable/register_cnfpassword"
        android:inputType="textPassword"
        android:hint="@string/passwordHint"
        android:layout_below="@id/login"
         android:textColorHint="#111111"
        android:layout_marginTop="20dp"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:id="@+id/login"
        android:onClick="login"
        android:textColor="#ffffff"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@id/forgotPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="#0D47A1"
        android:layout_weight="1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/forgotpasswordText"
        android:textSize="20sp"
        android:id="@+id/forgotPassword"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:onClick="forgotPassword"/>
</LinearLayout>




</RelativeLayout>

